# friends-random-bot-rust

./: .envrc.dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  config.example.json  rustfmt.toml  systemd.service
.github/workflows/: ci.yml
src/: application.rs  bot.rs  config.rs  error.rs  lib.rs  main.rs  watch_url_provider.rs
src/application/: episode.rs  episodes.rs  error.rs
src/bot/: callback.rs
src/watch_url_provider/: provider_1.rs
