[package]
name = "friends-random-bot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
openssl = { version = "0.10.72", features = ["vendored"] }
pretty_env_logger = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
teloxide = { version = "0.15.0", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }


[profile.release]
opt-level = 'z'  # Optimize for size ('s' is less aggressive)
lto = true       # Link-Time Optimization
codegen-units = 1 # Slower build but better optimization
panic = 'abort'  # Don't include panic unwinding info
strip = true     # Remove debug symbols
