[package]
name = "friends-random-bot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
log = { version = "0.4.27", features = ["kv"] }
openssl = { version = "0.10.72", features = ["vendored"] }
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
teloxide = { version = "0.15.0", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.19.1"

[lints.clippy]
unwrap_used = "warn"
